--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -73,3 +73,12 @@ button {
   opacity: 0.95;
 }
 
+.animation-fade {
+    animation-name: fade;
+    animation-duration: .8s;
+    animation-timing-function: linear
+}
+
+.animation-reverse {
+    animation-direction: reverse
+}
