--- a/pages/art_details/art_details.wxml
+++ b/pages/art_details/art_details.wxml
@@ -1,14 +1,21 @@
 <!--pages/workspaces/workspaces.wxml-->
 
 <!-- card flex -->
+
 <view style="display:flex; flex-wrap:wrap;"></view>
   <view class="flex-wrp">
     <view class="flex-item;">
-      <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://images.unsplash.com/photo-1515405295579-ba7b45403062');">
-  <view class="card-category">Workspace Category</view>
+      <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{art.photo}}');">
+  <view class="card-category">{{art.title}}</view>
   </view>
-  <view>{{art.title}}</view>
+  <h2>Description</h2>
+  <view>{{art.description}}</view>
 
+  <h2>Artist #</h2>
+  <view>{{art.artist_id}}</view>
+
+  <h2>Gallery #</h2>
+  <view>{{art.gallery_id}}</view>
   
 </view>
 
