Galleries Index Page From Landing page directed to index page of galleries. Need to implement WeChat authorization and have list of galleries only shown to users who scanned that QR code Also created redirect to gallery show page but needs to change html to pull from gallery mock data api

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,6 +3,6 @@
   <view class="banner-content" >
     <text class="h1" style="opacity:0.95;font-size: 40px; font-weight:385; ">Pentimento</text>
     <text class="subtitle" style="opacity:0.68;font-size: 20px;">\nFind what you love.</text>
-    <button bindtap="goToArtsPage" class="primary btn animation-{{animation==button.name? button.name :''}} animation-reverse m-sm basis-sm" data-class="{{button.name}}">View Artwork</button>
+    <button bindtap="goToArtsPage" class="primary btn animation-{{animation==button.name? button.name :''}} animation-reverse m-sm basis-sm" data-class="{{button.name}}">Start Here</button>
   </view>
 </view>
