--- a/pages/show_gallery/show_gallery.wxml
+++ b/pages/show_gallery/show_gallery.wxml
@@ -6,20 +6,9 @@
     <view class="flex-item;">
       <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{art.photo}}');">
   <view class="art-title">{{art.title}}</view>
-  <view class="art-description">{{art.description}}</view>
-  </view>
-
+  <view class="art-description">{{art.description}}
   
-
-
-
-  <view>Gallery Address:{{art.address}}</view>
-
-
-  <h2>Artist #</h2>
-  <view>{{art.artist_id}}</view>
-
-  <h2>Gallery #</h2>
-  <view>{{art.gallery_id}}</view>
+  </view>
+  </view>
   </view>
 </view>
