--- a/pages/arts/arts.wxss
+++ b/pages/arts/arts.wxss
@@ -1,13 +1,31 @@
-/* pages/workspaces/workspaces.wxss */
+/* pages/show_gallery/show_gallery.wxss */
+@import "../../icon.wxss";
+@import "../../colorui.wxss";
+
+/* pages/art_details/art_details.wxss */
+page {
+  background-color: #647480;
+}
+pages/workspaces/workspaces.wxss
 h1 {
   text-align: center;
   font-size: 80rpx;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-page {
-  background-color: #66747F;
+.bull-icon{
+  width:80rpx;
+  height: 80rpx;
 }
+
+/*分割线样式*/
+.divLine{
+ /* background: #E0E3DA; */
+ width: 100%;
+ /* height: 5rpx; */
+ margin-top: 20rpx;
+}
+
 
 .card-user {
   position: absolute;
@@ -59,6 +77,10 @@ page {
   /* flex: 50%; */
   justify-content: center;
 }
+
+
+
+
 
 .extend-padding {
   padding-left: 20px;
@@ -128,37 +150,253 @@ page {
   opacity: 0.7;
   z-index: 99;
 }
-.card {
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
-  background-position: center;
-  color: white;
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  margin: 6%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 650rpx;
-  height: 500rpx;
-  border-radius: 3px;
-  margin-bottom: 0px;
+/*FOR BOTTOM TAB  */
+
+.post-align {
+  text-align: center;
 }
 
-.card-desc {
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.discount-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+   text-align: center; 
+   opacity: 0.8;
+}
+
+.card {
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 600rpx;
+  height: 337rpx;
+  border-radius: 3px;
+  margin-left: 75rpx;
+}
+
+.flex-wrp {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-item-head {
+  flex: 0 0 60px;
+  
+}
+
+.flex-item-pic {
+  flex: 0 0 250px;
+  background-size: cover;
+  background-position: center center;
+}
+
+.flex-item-msg {
+  flex: 0 0 15px;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.flex-item-location {
+  flex: 0 0 20px;
+  font-size: 8px;
+  text-align: center;
+  color: #888888;
+  margin-bottom: 5px;
+}
+
+.flex-item-bottom {
+  flex: 0 0 30px;
+}
+
+.card-head {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 5px;
+}
+
+.flex-for-name-time {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 5px;
+}
+
+.username-font-size-xs {
+  font-size: 10px;
+}
+
+.username-font-size-sm {
+  font-size: 12px;
+}
+
+
+.username-font-size-nm {
+  font-size: 16px;
+}
+
+.detail-font-head {
+  font-size: 10px;
+  color: #888888;
+}
+
+.card-head-between-name-discount {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 5px;
+}
+
+.flex-item-name {
+  flex: 0 0 auto;
+}
+
+.card-head-right {
+  flex: 1 0 auto;
+}
+
+.discount-text {
+  color: black;
+  font-size: 16px;
+   padding-top: 12px; 
+}
+
+.flex-item-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flex-bottom-item {
+  color: #333333;
+  font-size: 12px;
+}
+
+/* FOR LOADING CARDS  */
+
+
+.FB-Loading-Card{
+  background-color: rgb(255, 255, 255);
+  border-radius: 3px;
+  border-bottom: rgb(208, 209, 213) solid 1px;
+  border-left: rgb(223, 224, 228) solid 1px;
+  border-right-color: rgb(223, 224, 228) solid 1px;
+  border-top-color: rgb(229, 230, 233) solid 1px;
+  display: block;
+   height: 300px;
+  /* width: 494px;  */
+  padding: 12px;
+}
+.FB-Loading-FirstBox{
+  width:100%;
+  height:30px;
+}
+.FB-Loading-FirstBox-Img{
+  position:relative;
+  left:0;
+  background-color: #CCC;
+  height: 40px;
+  width: 40px;
+  animation-name: shine; 
+  animation-duration: 2s; 
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.FB-Loading-FirstBox-1stRow, .FB-Loading-FirstBox-2ndRow, .FB-Loading-FirstBox-3rdRow, .FB-Loading-FirstBox-4thRow, .FB-Loading-FirstBox-5thRow{
+  position:relative;
+  background-color: #CCC;
+  height: 6px;
+  animation-name: shine; 
+  animation-duration: 2s; 
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes shine {
+    from {transition:none;}
+    to {background-color:#f6f7f8;transition: all 0.3s ease-out;}
+}
+.FB-Loading-FirstBox-1stRow{
+  left:50px;
+  top:-33px;
+  width: 25%;
+}
+.FB-Loading-FirstBox-2ndRow{
+  left:50px;
+  top:-20px;
+  width: 15%;
+}
+.FB-Loading-FirstBox-3rdRow{
+  left:0px;
+  top:30px;
+  width: 80%;
+}
+.FB-Loading-FirstBox-4thRow{
+  left:0px;
+  top:45px;
+  width: 90%;
+}
+.FB-Loading-FirstBox-5thRow{
+  left:0px;
+  top:60px;
+  width: 50%;
+}
+
+.pull-down-center {
+  text-align: center;
+}
+
+.pull-avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.bottom-end{
+  margin-bottom: 30rpx;
+}
+
+.star-solid{
+  background-image: '../../lib/assets/images/icon/star-solid.png';
+}
+
+.card {
+  display: flex;
+  position: relative;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   color: white;
-  text-align:center;
-  position: relative;
-  display: flex;
   justify-content: space-around;
-  margin: 6%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 650rpx;
-  height: 180rpx;
-  border-radius: 3px;
-  margin-top:0px;
-  padding-top:8px;
-  /* background-color: #5B728A; */
+  margin: 13px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  width: 700rpx;
+  height: 800rpx;
+  border-radius: 5px;
+  margin-bottom: 65rpx;
+}
+
+.art-title {
+  position: absolute !important;
+  top: 12px;
+  left: 12px;
+  font-size: 23px;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.art-description {
+  position: absolute !important;
+  bottom: 12px;
+  left: 12px;
+  font-size: 16px;
+  text-transform: capitalize;
 }
