update some adjustment

--- a/pages/galleries/galleries.wxml
+++ b/pages/galleries/galleries.wxml
@@ -1,6 +1,6 @@
 <!--pages/galleries/galleries.wxml-->
 
-<view class="title">Your Galleries Here</view>
+<view class="title">Your Galleries</view>
 
 <!-- Add Logic, if not gallereies display this message -->
 
