--- a/pages/show_gallery/show_gallery.wxml
+++ b/pages/show_gallery/show_gallery.wxml
@@ -1,29 +1,41 @@
 <view class="body">
+
+  <!-- Block for Artwork items -->
   <block wx:for='{{ artworks }}'>
+  
+    <!-- Flex item -->
     <view class="flex-item">
       <view bindtap='showModal' data-modal="defualtmodal" data-id='{{item.id}}' data-description='{{item.description}}' data-title='{{item.title}}' class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url( {{ item.photo }} );">
-      <view class="art-title">{{item.title}}</view>
-      <view class="art-description">{{item.description}}</view>
-      </view>
-    
+        <view class="art-title">{{item.title}}</view>
+        <view class="art-description">{{item.description}}</view>
 
-
-    <view class="modal-box {{modalName=='defualtmodal'?'cur':''}}">
-  <view class='modal-dialog'>
-    <view class="modal-title">
-      <text>{{item.title}}</text>
-      <view class='bar-close badge danger round' bindtap='closeModal'>
-        <text class='iconfont icon-close'></text>
       </view>
     </view>
-    <view class='modal-bd'>
-    <view>{{item.description}}</view>
+     <!-- Flex item -->
+
+    <!-- Modal Box -->
+    <view class="modal-box {{modalName=='defualtmodal' ? 'cur' : '' }}">
+      <view class='modal-dialog'>
+
+        <!-- Modal title -->
+        <view class="modal-title">
+          <text>{{item.title}}</text>
+          <view class='bar-close badge danger round' bindtap='closeModal'>
+            <text class='iconfont icon-close'></text>
+          </view>
+        </view>
+
+        <!-- Modal Body -->
+        <view class='modal-bd'>
+          <view>{{item.description}}</view>
+        </view>
+
+      </view>
+
     </view>
-  </view>
-</view>
+    <!-- Modal Box -->
 
+</block>
+<!-- Block for Artwork items -->
 
-
-</view>
-  </block>
 </view>
