removed QR code function. T_T

--- a/pages/galleries/galleries.wxml
+++ b/pages/galleries/galleries.wxml
@@ -18,4 +18,4 @@
 
 <!-- <button class="float" bindtap=""><i src="{{src}}"></i></button> -->
 
-<button class="float" bindtap="callQRcode"><i src="{{src}}"></i></button>
+<!-- <button class="float" bindtap="callQRcode"><i src="{{src}}"></i></button> -->
