Change log:   - https instead of http for api requests   - app.js file directing to login confirmation from WeChat   - lock icon displaying on locked galleries
TO DO:
 - Links in carousel and their corresponding pages working and styled
 - Lock function working on galleries index page
 - Update seed data for galleries with lock and pin info, db:reset doku

--- a/pages/galleries/galleries.wxml
+++ b/pages/galleries/galleries.wxml
@@ -22,10 +22,15 @@
   <block wx:for='{{ galleries }}'>
     <view class="flex-item">
       <view style="text-align:center; color:#f0f0f0; font-size:105%">{{item.title}}</view>
-      <view bindtap="showGallery" data-id='{{item.id}}'class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url( {{ item.photo }} );">
+        
+          <view bindtap="showGallery" data-id='{{item.id}}' class="card;" style="display: flex; background-image: linear-gradient({{ !item.locked ? 'rgba(0,0,0,0.3), rgba(0,0,0,0.2))' : 'rgba(0,0,0,2), rgba(0,0,0,0.45))' }}, url( {{ item.photo }} );">
+                <view wx:if="{{item.locked}}"><image style="height:100rpx; width:100rpx; justify-content:center; align-items:center;" src="{{src}}"></image></view>
+          </view>
+          
+          <view margin-bottom="250rpx" class="card-desc">{{item.name}} 
+          
       </view>
       
-      <view margin-bottom="250rpx" class="card-desc">{{item.name}}</view>
     </view>
   </block>
 </view>
@@ -33,3 +38,12 @@
 <!-- <button class="float" bindtap=""><i src="{{src}}"></i></button> -->
 
 <!-- <button class="float" bindtap="callQRcode"><i src="{{src}}"></i></button> -->
+
+
+<!-- Lock Galleries -->
+
+<!-- <view style='display:flex; padding: 23rpx;' >
+  <view style='padding-left:70rpx;' />
+  <view style='color:white; font-weight:500; font-size: 53rpx; border-right:1rpx solid white; padding-right:25rpx;'>Private</view>
+  <view style='color:white; font-weight:100; font-size: 83rpx; padding-left:25rpx; padding-top:40rpx;'>Galleries</view>
+  </view> -->
