--- a/pages/show_artists/show_artists.wxml
+++ b/pages/show_artists/show_artists.wxml
@@ -1,4 +1,4 @@
-<image mode='aspectFill' style='width:100%; height:550rpx;' src='http://pentimento-mp.ellerystars.xyz/img/artists/roman-signer/profile.jpg'></image>
+<image mode='aspectFill' style='width:100%; height:550rpx;' src='https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'></image>
 
 
 <!-- Heaher -->
@@ -14,7 +14,7 @@
 <view class="body" style="margin: 15rpx; margin-top: 32rpx;">
 
 <!-- Artists description   -->
-  <text class="artists_desc">Roman Signer (born 1938 in Appenzell, Switzerland) is principally a visual artist who works in sculpture, art installations photography, and video.\n</text>
+  <text class="artists_desc">Roman Signer (born 1985 in Appenzell, Switzerland) is principally a visual artist who works in sculpture, art installations photography, and video.\n</text>
   <view class = "h3">Awards</view>
   <view style='padding-left:20rpx;'>
     <text class = "artists_desc">
