--- a/pages/show_gallery/show_gallery.wxml
+++ b/pages/show_gallery/show_gallery.wxml
@@ -1,9 +1,19 @@
-<image bindtap="enlargeImage" data-src='{{ gallery.photo }}' src='{{ gallery.photo }}'></image>
+<!-- <image bindtap="enlargeImage" data-src='{{ gallery.photo }}' src='{{ gallery.photo }}'></image>
+ -->
+<view style='display:flex; padding: 23rpx;' >
+  <view style='padding-left:70rpx;' />
+  <view style='color:white; font-weight:500; font-size: 53rpx; border-right:1rpx solid white; padding-right:25rpx;'>Gallery</view>
+  <view style='color:white; font-weight:100; font-size: 83rpx; padding-left:25rpx; padding-top:40rpx;'>{{gallery.name}}</view>
+  </view>
 
-<view class="gallery-summary" >
+<view  class="gallery-summary" >
 <!-- <view>{{ gallery.name }}</view> -->
-<view class="gallery-infos" style='margin-bottom:18rpx;'> Address: {{ gallery.address }}</view>
+<!-- Address + tel -->
+<view>
+  <view class="gallery-infos" style='margin-bottom:18rpx;'> Address: {{ gallery.address }}</view>
 <view class="gallery-infos">Tel: {{ gallery.phone_number }}</view>
+</view>
+<!-- Address + tel -->
 <!-- <view class="gallery-infos">Description: {{ gallery.description }}</view> -->
 </view>
 
