--- a/pages/show_artists/show_artists.wxml
+++ b/pages/show_artists/show_artists.wxml
@@ -1,4 +1,4 @@
-<image mode='aspectFill' style='width:100%; height:550rpx;' src='https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'></image>
+<image mode='aspectFill' style='width:100%; height:550rpx;' src='http://pentimento-mp.ellerystars.xyz/img/artists/wangechi-mutu/profile.jpg'></image>
 
 
 <!-- Heaher -->
