smaill layout changes

--- a/pages/galleries/galleries.wxss
+++ b/pages/galleries/galleries.wxss
@@ -150,14 +150,14 @@ page {
   background-size: cover !important;
   background-position: center;
   color: white;
-  text-align:center;
   position: relative;
   display: flex;
+  align-items:center;
   justify-content: space-around;
   margin: 6%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 650rpx;
-  height: 160rpx;
+  height: 120rpx;
   border-radius: 3px;
   margin-top:0px;
   padding-top:8px;
