PIN verification If pin is correct redirects user and allows gallery to remain unlocked

--- a/pages/enter_pin/enter_pin.wxml
+++ b/pages/enter_pin/enter_pin.wxml
@@ -5,7 +5,7 @@
     
     <!-- <text class="subtitle" style="opacity:0.68;font-size: 20px;">\nEnter Your Pin</text> -->
     <view style='border: 1rpx solid white; border-radius: 6px; padding: 8px 16px; opacity: 0.75;'>
-      <input placeholder-class="input-box" style="opacity:0.88;font-size: 18px; " type="password" name="pin" placeholder="Please Enter PIN Here"/>
+      <input placeholder-class="input-box" bindinput="bindKeyInput" style="opacity:0.88;font-size: 18px; " type="password" name="pin" placeholder="Enter Pin Code"/>
     </view>
     
     <button bindtap="goToGalleryPage" class="primary btn animation-{{animation==button.name? button.name :''}} animation-reverse m-sm basis-sm" data-class="{{button.name}}">Submit</button>
