--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <view class="banner" style = "background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 60%), url('http://pentimento-mp.ellerystars.xyz/img/banner.jpg');">
   <view class="banner-content" >
     <text class="h1" style="opacity:0.95;font-size: 40px; font-weight:385; ">Pentimento</text>
-    <text class="subtitle" style="opacity:0.68;font-size: 20px;">\nFind Your Favorite Arts.</text>
+    <text class="subtitle" style="opacity:0.68;font-size: 20px;">\nFind what you love</text>
     <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" bindtap="goToArtsPage" class="primary btn animation-{{animation==button.name? button.name :''}} animation-reverse m-sm basis-sm" data-class="{{button.name}}">Explore Pento</button>
   </view>
 </view>
