--- a/pages/galleries/galleries.wxml
+++ b/pages/galleries/galleries.wxml
@@ -24,7 +24,7 @@
       <view style="text-align:center; color:#f0f0f0; font-size:105%">{{item.title}}</view>
       
         
-          <view bindtap="{{ !item.locked ? 'showGallery' : 'enterPin'}}" data-id='{{item.id}}' class="card;" style="display: flex; align-items:center; background-image: linear-gradient({{ !item.locked ? 'rgba(0,0,0,0.3), rgba(0,0,0,0.2))' : 'rgba(0,0,0,0.3), rgba(0,0,0,0.5))' }}, url( {{ item.photo }} );">
+          <view id="{{index}}" bindtap="{{ !item.locked ? 'showGallery' : 'enterPin'}}" data-id='{{item.id}}' class="card;" style="display: flex; align-items:center; background-image: linear-gradient({{ !item.locked ? 'rgba(0,0,0,0.3), rgba(0,0,0,0.2))' : 'rgba(0,0,0,0.3), rgba(0,0,0,0.5))' }}, url( {{ item.photo }} );">
                 <view wx:if="{{item.locked}}"><image style="height:100rpx; width:100rpx" src="{{src}}"></image></view>
           </view>
           
