adding open hours feature, but not it will not use it on the demo day.

--- a/pages/galleries/galleries.wxml
+++ b/pages/galleries/galleries.wxml
@@ -32,6 +32,7 @@
       
     </view>
   </block>
+  <view class="bottom-spacing"></view>
 </view>
 
 <!-- <button class="float" bindtap=""><i src="{{src}}"></i></button> -->
