Updated API links to use digital ocean. Added icon for art description on gallery show page
Link is directing to art's detail page but displaying static info, not changing for each piece of art.
Also have issue with bindtap triggering expansion of photo and then redirecting. I want tap on icon to
redirect only.

TODO: Style info icon and place in top right position or bottom right. Fix links and display of arts detail
page.

--- a/pages/show_gallery/show_gallery.wxml
+++ b/pages/show_gallery/show_gallery.wxml
@@ -32,8 +32,9 @@
         <view class="art-title">{{item.title}}</view>
 
         <view class="art-description">{{item.description}}</view>
-
+        <image style='width:70rpx; height:70rpx;' bindtap="showArt" src="{{src}}"></image>
       </view>
+      
     </view>
      <!-- Flex item -->
 
@@ -46,7 +47,6 @@
           <text>{{item.title}}</text>
           <view class='bar-close badge danger round' bindtap='closeModal'>
           
-            <text class='iconfont icon-close'></text>
           </view>
         </view>
 
@@ -59,7 +59,6 @@
 
     </view>
     <!-- Modal Box -->
-
 </block>
 <!-- Block for Artwork items -->
 <view class="bottom-spacing"></view>
