--- a/pages/art_details/art_details.wxml
+++ b/pages/art_details/art_details.wxml
@@ -6,16 +6,16 @@
   <view class="flex-wrp">
     <view class="flex-item;">
       <view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('{{art.photo}}');">
-  <view class="card-category">{{art.title}}</view>
+  <view class="card-category"></view>
   </view>
+  <h2>Title</h2>
+  <view>{{art.title}}</view>
+
+  <h2>Artist Name</h2>
+  <view>{{art.artist_name}}</view>
+
   <h2>Description</h2>
   <view>{{art.description}}</view>
-
-  <h2>Artist #</h2>
-  <view>{{art.artist_id}}</view>
-
-  <h2>Gallery #</h2>
-  <view>{{art.gallery_id}}</view>
   
 </view>
 
